# meta-kaggle-hackathon

./: .gitignore  .kedro.yml  .pre-commit-config.yaml  README.md  conftest.py  data_probing.ipynb  environment.yml  project_desc.md  pyproject.toml  pytest.ini  setup.py  setup_env.sh
conf/base/: catalog.yml  logging.yml  parameters.yml
conf/base/parameters/: features.yml
sample/: README.md
scripts/: build_bigjoin.py  create_raw_code_dir.py  csv_to_parquet.py  download_extract_meta_kaggle_code_ds.py  extract_features.py  make_mini_meta.py  merge_features.py  prune_columns.py  run_data_pipeline.py  run_feature_pipeline.py  run_graphs_pipeline.py  run_kedro_pipeline.py  topic_modeling.py  validate_data.py  validate_schema.py
src/: __init__.py  hooks.py  main.py  pipeline_registry.py  settings.py
src/features/: extract_features.py  gcs_path_utils.py  local_path_utils.py  path_utils.py
src/graphs/: __init__.py  core.py  visualization.py
src/pipeline/: __init__.py  etl.py  nodes.py  registry.py
src/pipeline/data_layer/: __init__.py  nodes.py  pipeline.py
src/pipeline/features/: __init__.py  nodes.py
src/pipeline/graphs/: __init__.py  nodes.py
tests/: __init__.py  conftest.py  test_extract_features.py  test_features_pipeline_nodes.py  test_gcs_path_utils.py  test_light_pipeline.py  test_nodes.py  test_path_utils.py  test_pipeline_e2e.py  test_pipeline_integration.py
